added static attributes to DBAccess

--- a/db.properties
+++ b/db.properties
@@ -1,8 +1,5 @@
-<?xml version="1.0" encoding="UTF€€€-8"?>
-<!DOCTYPE properties SYSTEM "http://java.sun.com/dtd/properties.dtd">
-<properties>
-<entry key="dbType">"org.postgresql.Driver"</entry>
-<entry key="url">"jdbc:postgresql://localhost:5432/shs"</entry>
-<entry key="user">"postgres"</entry>
-<entry key="password">"admin"</entry>
-</properties>
+#postgre DB properties
+DB_DRIVER_CLASS=org.postgresql.Driver
+DB_URL=jdbc:jdbc:postgresql://localhost:5432/shs
+DB_USERNAME=postgres
+DB_PASSWORD=admin
