--- a/db.properties
+++ b/db.properties
@@ -1,5 +1,5 @@
 #postgre DB properties
 DB_DRIVER_CLASS=org.postgresql.Driver
-DB_URL=jdbc:jdbc:postgresql://localhost:5432/shs
+DB_URL=jdbc:postgresql://localhost:5432/shs
 DB_USERNAME=postgres
 DB_PASSWORD=admin
