--- a/db.properties
+++ b/db.properties
@@ -3,3 +3,5 @@ DB_DRIVER_CLASS=org.postgresql.Driver
 DB_URL=jdbc:postgresql://localhost:5432/shs
 DB_USERNAME=postgres
 DB_PASSWORD=admin
+INITIAL_POOL_SIZE=25
+MAX_POOL_SIZE = 100
