--- a/.classpath
+++ b/.classpath
@@ -9,5 +9,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Program Files (x86)/PostgreSQL/pgJDBC/postgresql-42.2.2.jre7.jar"/>
+	<classpathentry kind="lib" path="ressources/gson-2.8.5.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
