--- a/.classpath
+++ b/.classpath
@@ -8,7 +8,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/PostgreSQL/pgJDBC/postgresql-42.2.2.jre7.jar"/>
 	<classpathentry kind="lib" path="ressources/gson-2.8.5.jar"/>
+	<classpathentry kind="lib" path="ressources/postgresql-42.2.2.jre7.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
