--- a/ressources/db.properties
+++ b/ressources/db.properties
@@ -1,7 +1,7 @@
 #postgre DB properties
 DB_DRIVER_CLASS=org.postgresql.Driver
-DB_URL=jdbc:postgresql://192.168.20.24:5432/shs
-DB_USERNAME=admin
+DB_URL=jdbc:postgresql://127.0.0.1:5432/shs
+DB_USERNAME=postgres
 DB_PASSWORD=admin
 INITIAL_POOL_SIZE=1
 MAX_POOL_SIZE = 3
