--- a/ressources/db.properties
+++ b/ressources/db.properties
@@ -4,4 +4,6 @@ DB_URL=jdbc:postgresql://127.0.0.1:5432/shs
 DB_USERNAME=postgres
 DB_PASSWORD=admin
 INITIAL_POOL_SIZE=1
-MAX_POOL_SIZE = 3
+MAX_POOL_SIZE=3
+SERVER=192.168.20.24
+PORT_SERVER=2009
