--- a/ressources/db.properties
+++ b/ressources/db.properties
@@ -1,8 +1,7 @@
 #postgre DB properties
 DB_DRIVER_CLASS=org.postgresql.Driver
-DB_URL=jdbc:postgresql://10.10.1.2:5432/shs
+DB_URL=jdbc:postgresql://localhost:5432/shs
 DB_USERNAME=postgres
 DB_PASSWORD=admin
 INITIAL_POOL_SIZE=1
-MAX_POOL_SIZE=3
-PORT_SERVER=2009
+MAX_POOL_SIZE = 3
