feature: add scenario to broken sensor,TODO sever function for detect broken sensor

--- a/ressources/server-scenario.properties
+++ b/ressources/server-scenario.properties
@@ -1,3 +1,3 @@
 #begin scenario d'alerts
-scenarios=type:smoke_sensor;id:1;value1:200-3;value2:600-1;value3:400-4;value4:450-4;value5:650-6/type:temperature_sensor;id:31;value1:9-2;value2:10-4;value3:8-2;value4:9-3;value5:11-20
+scenarios=type:smoke_sensor;id:1;value1:200-3;value2:600-1;value3:400-4;value4:450-4;value5:650-6/type:temperature_sensor;id:31;value1:9-2;value2:10-4;value3:8-2;value4:9-3;value5:11-20/type:smoke_sensor;id:2;value1:0-0
 #end
