--- a/ressources/server.properties
+++ b/ressources/server.properties
@@ -6,3 +6,6 @@ DB_PASSWORD=admin
 INITIAL_POOL_SIZE=30
 MAX_POOL_SIZE=120
 PORT_SERVER=2009
+INITIAL_DELAY=6000
+LAST_SIGNAL_DELAY=35000
+DEFAULT_DELAY=3000
