--- a/ressources/server-scenario.properties
+++ b/ressources/server-scenario.properties
@@ -1,4 +1,5 @@
 #begin scenario d'alerts
 scenarios=type:smoke_sensor;id:1;value1:200-3;value2:600-1;value3:400-4;value5:650-6/type:temperature_sensor;id:31;value1:9-2;value2:10-4;value3:8-2;value4:9-3;value5:11-10/type:smoke_sensor;id:2;value1:600-4;value2:0-0
 DELTA_SIGNALS=1500
+ROWS_VIEWS=1000
 #end
