--- a/.classpath
+++ b/.classpath
@@ -3,12 +3,9 @@
 	<classpathentry kind="src" path="com.shs.client"/>
 	<classpathentry kind="src" path="com.shs.server"/>
 	<classpathentry kind="src" path="com.shs.commons"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_111"/>
 	<classpathentry kind="lib" path="ressources/gson-2.8.5.jar"/>
 	<classpathentry kind="lib" path="ressources/postgresql-42.2.2.jre7.jar"/>
+	<classpathentry kind="lib" path="/project1/.classpath"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
